--- a/demo/html5 css3/15种CSS3hover时效果/css/index.css
+++ b/demo/html5 css3/15种CSS3hover时效果/css/index.css
@@ -66,7 +66,7 @@ figcaption a { position: absolute; top: 0; left: 0; z-index: 1; width: 100%; hei
 	transition: transform 0.35s, opacity 0.35s;
 }
 .type4:hover img { transform: translate3d(0, 0, 0); opacity: 0.7; transition-delay: 0.15s; }
-.type4 figcaption { position: absolute; top: 0; left: 0; width: 100%; height: 100%; padding: 3em; }
+.type4 figcaption { position: absolute; top: 0; left: 0; width: 100%; height: 100%; padding: 7em; }
 .type4 figcaption:before,
 .type4 figcaption:after { position: absolute; content: ''; opacity: 0; transition: opacity 0.35s, transform 0.35s; }
 .type4 figcaption:before { top: 50px; bottom: 50px; right: 30px; left: 30px; border-top: 1px solid #fff; border-bottom: 1px solid #fff;
@@ -77,6 +77,15 @@ figcaption a { position: absolute; top: 0; left: 0; z-index: 1; width: 100%; hei
 }
 .type4:hover figcaption:before { opacity: 1; transform: scale(1, 1); }
 .type4:hover figcaption:after { opacity: 1; transform: scale(1, 1); }
+.type4 h2 {
+	transition: transform 0.35s;
+}
+.type4:hover h2 { transform: translate3d(0, 30px, 0); }
+.type4 p { opacity: 0; transform: translate3d(0, 35px, 0);
+	transition: opacity 0.35s;
+}
+.type4:hover p { opacity: 1; transition-delay: 0.2s; }
+
 
 /*
 	transition-delay 运动前等待事件
@@ -89,4 +98,5 @@ figcaption a { position: absolute; top: 0; left: 0; z-index: 1; width: 100%; hei
 
 	backface-visibility:hidden; 当元素不面向屏幕时是否可见（旋转到背面后是否可见）
 	pointer-events:none; 元素永远不会成为鼠标事件的target。
+	text-transform:uppercase;
 */
